@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.455 2006/11/14 15:56:32 joerg Exp $
+# $NetBSD: Makefile,v 1.456 2006/11/14 17:04:21 joerg Exp $
 #
 
 COMMENT=	Packages to support the X window system
@@ -332,6 +332,9 @@ SUBDIR+=	xdm3d
 SUBDIR+=	xearth
 SUBDIR+=	xephem
 SUBDIR+=	xextproto
+SUBDIR+=	xf86-input-keyboard
+SUBDIR+=	xf86-input-mouse
+SUBDIR+=	xf86-video-ati
 SUBDIR+=	xf86bigfontproto
 SUBDIR+=	xf86dgaproto
 SUBDIR+=	xf86driproto
